--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="elements__element">
                 <img src="./images/image1.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
-                    <p class="elements__text">Барселона, Испания</p>
+                    <h2 class="elements__text">Барселона, Испания</h2>
                     <button class="elements__like">
                     </button>
                 </div>
@@ -44,35 +44,35 @@
             <div class="elements__element">
                 <img src="./images/image2.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
-                    <p class="elements__text">Венеция, Италия</p>
+                    <h2 class="elements__text">Венеция, Италия</h2>
                     <button class="elements__like"></button>
                 </div>
             </div>
             <div class="elements__element">
                 <img src="./images/image3.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
-                    <p class="elements__text">Озеро Гарда, Италия</p>
+                    <h2 class="elements__text">Озеро Гарда, Италия</h2>
                     <button class="elements__like"></button>
                 </div>
             </div>
             <div class="elements__element">
                 <img src="./images/image4.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
-                    <p class="elements__text">Флоренция, Италия</p>
+                    <h2 class="elements__text">Флоренция, Италия</h2>
                     <button class="elements__like"></button>
                 </div>
             </div>
             <div class="elements__element">
                 <img src="./images/image5.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
-                    <p class="elements__text">Тосса де Мар, Испания</p>
+                    <h2 class="elements__text">Тосса де Мар, Испания</h2>
                     <button class="elements__like"></button>
                 </div>
             </div>
             <div class="elements__element">
                 <img src="./images/image6.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
-                    <p class="elements__text">Ватикан</p>
+                    <h2 class="elements__text">Ватикан</h2>
                     <button class="elements__like"></button>
                 </div>
             </div>
