--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                         <h1 class="profile__info-name">Жак-Ив Кусто</h1>
                         <p class="profile__info-job">Исследователь океана</p>
                     </div>
-                    <button class="profile__edit">
+                    <button class="profile__edit" type="button">
                         <img src="./images/Vector.svg" alt="" class="profile__edit-vector">
                     </button>
                 </div>
             </div>
-            <button class="profile__add">
+            <button class="profile__add" type="button">
                 <img src="./images/add+.svg" alt="" class="profile__add-vector">
             </button>
         </section>
@@ -37,54 +37,56 @@
                 <img src="./images/image1.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
                     <h2 class="elements__text">Барселона, Испания</h2>
-                    <button class="elements__like">
-                    </button>
+                    <button class="elements__like" type="button"></button>
                 </div>
             </div>
             <div class="elements__element">
                 <img src="./images/image2.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
                     <h2 class="elements__text">Венеция, Италия</h2>
-                    <button class="elements__like"></button>
+                    <button class="elements__like" type="button"></button>
                 </div>
             </div>
             <div class="elements__element">
                 <img src="./images/image3.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
                     <h2 class="elements__text">Озеро Гарда, Италия</h2>
-                    <button class="elements__like"></button>
+                    <button class="elements__like" type="button"></button>
                 </div>
             </div>
             <div class="elements__element">
                 <img src="./images/image4.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
                     <h2 class="elements__text">Флоренция, Италия</h2>
-                    <button class="elements__like"></button>
+                    <button class="elements__like" type="button"></button>
                 </div>
             </div>
             <div class="elements__element">
                 <img src="./images/image5.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
                     <h2 class="elements__text">Тосса де Мар, Испания</h2>
-                    <button class="elements__like"></button>
+                    <button class="elements__like" type="button"></button>
                 </div>
             </div>
             <div class="elements__element">
                 <img src="./images/image6.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
                     <h2 class="elements__text">Ватикан</h2>
-                    <button class="elements__like"></button>
+                    <button class="elements__like" type="button"></button>
                 </div>
             </div>
         </section>
         <section class="popup">
             <div class="popup__content">
-                <img src="./images/Close_Icon.svg" alt="" class="popup__close-icon">
+                <button class="popup__close">
+                    <img src="./images/Close_Icon.svg" alt="" class="popup__close-icon">
+                </button>
                 <div class="popup__form">
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <input type="text" class="popup__name popup__input" placeholder="Имя" value="Жак Ив Кусто">
-                    <input type="text" class="popup__job popup__input" placeholder="Работа" value="Исследователь океана">
-                    <button class="popup__save">Сохранить</button>
+                    <input type="text" class="popup__job popup__input" placeholder="Работа"
+                        value="Исследователь океана">
+                    <button class="popup__save" type="button">Сохранить</button>
                 </div>
             </div>
         </section>
