--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="./images/avatar.jpg" alt="Фото" class="profile__avatar">
                 <div class="profile__info">
                     <div class="profile__info-text">
-                        <h1 class="profile__info-name">Жак-Ив Кусто</h1>
+                        <h1 class="profile__info-name">Жак-Ив Кусто!!!</h1>
                         <p class="profile__info-job">Исследователь океана</p>
                     </div>
                     <button class="profile__edit" type="button">
