--- a/index.html
+++ b/index.html
@@ -11,25 +11,24 @@
 
 <body class="page">
     <header class="header">
-        <img src="./images/logo.svg" alt="Логотип" class="header__logo">
-        <div class="header__line"></div>
+        <img src="./images/logo.svg" alt="Логотип сервиса" class="header__logo">
     </header>
     <main class="content">
         <section class="profile">
             <div class="profile__elements">
-                <img src="./images/avatar.jpg" alt="Фото" class="profile__avatar">
+                <img src="./images/avatar.jpg" alt="Фото профиля" class="profile__avatar">
                 <div class="profile__info">
                     <div class="profile__info-text">
-                        <h1 class="profile__info-name">Жак-Ив Кусто!!!</h1>
+                        <h1 class="profile__info-name">Жак-Ив Кусто</h1>
                         <p class="profile__info-job">Исследователь океана</p>
                     </div>
                     <button class="profile__edit" type="button">
-                        <img src="./images/Vector.svg" alt="" class="profile__edit-vector">
+                        <img src="./images/Vector.svg" alt="Кнопка редактирования информации о профиле" class="profile__edit-vector">
                     </button>
                 </div>
             </div>
             <button class="profile__add" type="button">
-                <img src="./images/add+.svg" alt="" class="profile__add-vector">
+                <img src="./images/add+.svg" alt="Кнопка добавления фотографий" class="profile__add-vector">
             </button>
         </section>
         <section class="elements">
@@ -76,24 +75,24 @@
                 </div>
             </div>
         </section>
-        <section class="popup">
-            <div class="popup__content">
-                <button class="popup__close">
-                    <img src="./images/Close_Icon.svg" alt="" class="popup__close-icon">
-                </button>
-                <div class="popup__form">
-                    <h2 class="popup__title">Редактировать профиль</h2>
-                    <input type="text" class="popup__name popup__input" placeholder="Имя" value="Жак Ив Кусто">
-                    <input type="text" class="popup__job popup__input" placeholder="Работа"
-                        value="Исследователь океана">
-                    <button class="popup__save" type="button">Сохранить</button>
-                </div>
-            </div>
-        </section>
-    </main>
+            </main>
     <footer class="footer">
         <img src="./images/logofooter.svg" alt="Логотип" class="footer__logo">
     </footer>
+    <div class="popup">
+        <div class="popup__content">
+            <button class="popup__close" type="button">
+                <img src="./images/Close_Icon.svg" alt="Кнопка закрытия окна редактирования" class="popup__close-icon">
+            </button>
+            <form class="popup__form" name="popupForm" method="post">
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <input type="text" class="popup__input" placeholder="Имя" value="Жак Ив Кусто">
+                <input type="text" class="popup__input" placeholder="Работа"
+                    value="Исследователь океана">
+                <button class="popup__save" type="submit">Сохранить</button>
+            </form>
+        </div>
+    </div>
     <script src="./scripts/index.js"></script>
 </body>
 
