--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
             </button>
             <form class="popup__form" name="popupForm" method="post">
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <input type="text" class="popup__input" placeholder="Имя" value="Жак Ив Кусто">
-                <input type="text" class="popup__input" placeholder="Работа"
-                    value="Исследователь океана">
+                <input type="text" class="popup__input" placeholder="Имя" id="name" name="user_name">
+                <input type="text" class="popup__input" placeholder="Работа" id="job" name="user_job">
                 <button class="popup__save" type="submit">Сохранить</button>
             </form>
         </div>
