bugfix: sprint_4_bf1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                         <p class="profile__info-job">Исследователь океана</p>
                     </div>
                     <button class="profile__edit" type="button">
-                        <img src="./images/Vector.svg" alt="Кнопка редактирования информации о профиле" class="profile__edit-vector">
+                        <img src="./images/Vector.svg" alt="Кнопка редактирования информации о профиле"
+                            class="profile__edit-vector">
                     </button>
                 </div>
             </div>
@@ -75,9 +76,9 @@
                 </div>
             </div>
         </section>
-            </main>
+    </main>
     <footer class="footer">
-        <img src="./images/logofooter.svg" alt="Логотип" class="footer__logo">
+        <h2 class="footer__logo">© 2020 Mesto Russia</h2>
     </footer>
     <div class="popup">
         <div class="popup__content">
