--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </section>
     </main>
     <footer class="footer">
-        <h2 class="footer__logo">© 2020 Mesto Russia</h2>
+        <p class="footer__logo">© 2020 Mesto Russia</p>
     </footer>
     <div class="popup">
         <div class="popup__content">
