feat: old_cards

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
             </button>
         </section>
         <section class="elements">
-            <div class="elements__element">
-                <img src="./images/image1.jpeg" alt="Фото" class="elements__photo">
-                <button class="elemеnt__delete" type="button">
-                    <img src="./images/Vector.svg" alt="Кнопка удаления карточки" class="elemеnt__delete-button" type="button">
+            <!-- <div class="elements__element">
+                <button class="elemеnts__delete" type="button">
                 </button>
+                <img src="./images/image1.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
                     <h2 class="elements__text">Барселона, Испания</h2>
                     <button class="elements__like" type="button"></button>
                 </div>
             </div>
             <div class="elements__element">
+                <button class="elemеnts__delete" type="button"></button>
                 <img src="./images/image2.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
                     <h2 class="elements__text">Венеция, Италия</h2>
@@ -51,6 +51,7 @@
                 </div>
             </div>
             <div class="elements__element">
+                <button class="elemеnts__delete" type="button"></button>
                 <img src="./images/image3.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
                     <h2 class="elements__text">Озеро Гарда, Италия</h2>
@@ -58,6 +59,7 @@
                 </div>
             </div>
             <div class="elements__element">
+                <button class="elemеnts__delete" type="button"></button>
                 <img src="./images/image4.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
                     <h2 class="elements__text">Флоренция, Италия</h2>
@@ -65,6 +67,7 @@
                 </div>
             </div>
             <div class="elements__element">
+                <button class="elemеnts__delete" type="button"></button>
                 <img src="./images/image5.jpeg" alt="Фото" class="elements__photo">
                 <div class="elements__content">
                     <h2 class="elements__text">Тосса де Мар, Испания</h2>
@@ -72,13 +75,14 @@
                 </div>
             </div>
             <div class="elements__element">
+                <button class="elemеnts__delete" type="button">
+/button>
                 <img src="./images/image6.jpeg" alt="Фото" class="elements__photo">
-
                 <div class="elements__content">
                     <h2 class="elements__text">Ватикан</h2>
                     <button class="elements__like" type="button"></button>
                 </div>
-            </div>
+            </div> -->
         </section>
     </main>
     <footer class="footer">
@@ -110,6 +114,17 @@
             </form>
         </div>
     </div>
+
+    <template class="elements__element-template">
+        <div class="elements__element">
+            <button class="elemеnts__delete" type="button"></button>
+            <img src="" alt="Фото" class="elements__photo">
+            <div class="elements__content">
+                <h2 class="elements__text"></h2>
+                <button class="elements__like" type="button"></button>
+            </div>
+    </template>
+
     <script src="./scripts/index.js"></script>
 </body>
 
