--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             </button>
             <form class="popup__form" name="popupForm" method="post">
                 <h2 class="popup__title">Новое место</h2>
-                <input type="text" class="popup__input" placeholder="Название" id="comment" name="pic_name">
-                <input type="text" class="popup__input" placeholder="Ссылка на картинку" id="url" name="pic_url">
+                <input type="text" class="popup__input" placeholder="Название" id="name" name="pic_name">
+                <input type="link" class="popup__input" placeholder="Ссылка на картинку" id="url" name="pic_url">
                 <button class="popup__save" type="submit">Создать</button>
             </form>
         </div>
