--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@
             </form>
         </div>
     </div>
+    <div class="popup popup_black" id="popup_open">
+        <div class="popup__content-open" id="content_open">
+            <button class="popup__close" type="button">
+                <img src="./images/Close_Icon.svg" alt="Кнопка закрытия окна добавления" class="popup__close-icon">
+            </button>
+            <img src="" alt="Фотография" class="popup__opened-photo">
+            <span class="popup__photo-name">Название места</span>
+        </div>
+    </div>
 
     <template class="elements__element-template">
         <div class="elements__element">
