--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                 <h2 class="elements__text"></h2>
                 <button class="elements__like" type="button"></button>
             </div>
+        </div>
     </template>
 
     <script src="./scripts/index.js"></script>
