--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </button>
             <form class="popup__form" name="popupForm" method="post">
                 <h2 class="popup__title">Новое место</h2>
-                <input type="text" class="popup__input" placeholder="Название" id="name" name="pic_name">
+                <input type="text" class="popup__input" placeholder="Название" id="text" name="pic_name">
                 <input type="link" class="popup__input" placeholder="Ссылка на картинку" id="url" name="pic_url">
                 <button class="popup__save" type="submit">Создать</button>
             </form>
@@ -119,7 +119,7 @@
             <button class="popup__close" type="button">
                 <img src="./images/Close_Icon.svg" alt="Кнопка закрытия окна добавления" class="popup__close-icon">
             </button>
-            <img src="" alt="Фотография" class="popup__opened-photo">
+            <img src=" " alt="Фотография" class="popup__opened-photo">
             <span class="popup__photo-name">Название места</span>
         </div>
     </div>
@@ -127,7 +127,7 @@
     <template class="elements__element-template">
         <div class="elements__element">
             <button class="elemеnts__delete" type="button"></button>
-            <img src="" alt="Фото" class="elements__photo">
+            <img src=" " alt="Фото" class="elements__photo">
             <div class="elements__content">
                 <h2 class="elements__text"></h2>
                 <button class="elements__like" type="button"></button>
