--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <button class="popup__close" type="button">
                 <img src="./images/Close_Icon.svg" alt="Кнопка закрытия окна добавления" class="popup__close-icon">
             </button>
-            <img src=" " alt="Фотография" class="popup__opened-photo">
+            <img src=" " alt=" " class="popup__opened-photo">
             <span class="popup__photo-name">Название места</span>
         </div>
     </div>
@@ -127,7 +127,7 @@
     <template class="elements__element-template">
         <div class="elements__element">
             <button class="elemеnts__delete" type="button"></button>
-            <img src=" " alt="Фото" class="elements__photo">
+            <img src=" " alt=" " class="elements__photo">
             <div class="elements__content">
                 <h2 class="elements__text"></h2>
                 <button class="elements__like" type="button"></button>
