--- a/index.html
+++ b/index.html
@@ -93,10 +93,12 @@
             <button class="popup__close" type="button">
                 <img src="./images/Close_Icon.svg" alt="Кнопка закрытия окна редактирования" class="popup__close-icon">
             </button>
-            <form class="popup__form" name="popupForm" method="post">
+            <form class="popup__form" name="user" method="post" novalidate>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <input type="text" class="popup__input" placeholder="Имя" id="name" name="user_name">
-                <input type="text" class="popup__input" placeholder="Работа" id="job" name="user_job">
+                <input type="text" class="popup__input" minlength="2" maxlength="40" placeholder="Имя" id="name" name="user_name" required>
+                <span class="name-error"></span>
+                <input type="text" class="popup__input" minlength="2" maxlength="200" placeholder="Работа" id="job" name="user_job" required>
+                <span class="job-error"></span>
                 <button class="popup__save" type="submit">Сохранить</button>
             </form>
         </div>
@@ -106,10 +108,12 @@
             <button class="popup__close" type="button">
                 <img src="./images/Close_Icon.svg" alt="Кнопка закрытия окна добавления" class="popup__close-icon">
             </button>
-            <form class="popup__form" name="popupForm" method="post">
+            <form class="popup__form" name="add" method="post" novalidate>
                 <h2 class="popup__title">Новое место</h2>
-                <input type="text" class="popup__input" placeholder="Название" id="text" name="pic_name">
-                <input type="link" class="popup__input" placeholder="Ссылка на картинку" id="url" name="pic_url">
+                <input type="text" class="popup__input" minlength="2" maxlength="30" placeholder="Название" id="text" name="pic_name" required>
+                <span class="text-error"></span>
+                <input type="url" class="popup__input" placeholder="Ссылка на картинку" id="url" name="pic_url" required>
+                <span class="url-error"></span>
                 <button class="popup__save" type="submit">Создать</button>
             </form>
         </div>
@@ -136,6 +140,7 @@
     </template>
 
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
 </body>
 
 </html>
