--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                 <section class="popup__section">
                     <input type="text" class="popup__input" minlength="2" maxlength="40" placeholder="Имя" id="name"
                         name="user_name" required>
-                    <span class="text-error" id="name-error"></span>
+                    <span class="popup__input-text-error" id="name-error"></span>
                 </section>
                 <section class="popup__section">
                     <input type="text" class="popup__input" minlength="2" maxlength="200" placeholder="Работа" id="job"
                         name="user_job" required>
-                    <span class="text-error" id="job-error"></span>
+                    <span class="popup__input-text-error" id="job-error"></span>
                 </section>
                 <button class="popup__save" type="submit" disabled="true">Сохранить</button>
             </form>
@@ -119,12 +119,12 @@
                 <section class="popup__section">
                     <input type="text" class="popup__input" minlength="2" maxlength="30" placeholder="Название"
                         id="text" name="pic_name" required>
-                    <span class="text-error" id="text-error"></span>
+                    <span class="popup__input-text-error" id="text-error"></span>
                 </section>
                 <section class="popup__section">
                     <input type="url" class="popup__input" placeholder="Ссылка на картинку" id="url" name="pic_url"
                         required>
-                    <span class="text-error" id="url-error"></span>
+                    <span class="popup__input-text-error" id="url-error"></span>
                 </section>
                 <button class="popup__save" type="submit" disabled="true">Создать</button>
             </form>
